cabal-version:      3.0
name:               io-test
version:            1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrzej Rybczak
maintainer:         andrzej@rybczak.net

extra-doc-files:    CHANGELOG.md

executable io-test
    ghc-options:      -Wall -threaded

    main-is:          Main.hs

    build-depends:    base
                    , bytestring
                    , tasty-bench

    hs-source-dirs:   src

    default-language: Haskell2010

    default-extensions: LambdaCase
                      , TypeApplications
